Reduce batch size

--- a/results/process.ipynb
+++ b/results/process.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 74,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -19,7 +19,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 75,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -35,7 +35,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 76,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -48,7 +48,168 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 78,
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>checkpoint</th>\n",
+       "      <th>dataset</th>\n",
+       "      <th>method</th>\n",
+       "      <th>accuracy</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>60</th>\n",
+       "      <td>EleutherAI/pythia-1b-deduped</td>\n",
+       "      <td>cqa</td>\n",
+       "      <td>language_modeling</td>\n",
+       "      <td>0.3006</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>61</th>\n",
+       "      <td>EleutherAI/pythia-1b-deduped</td>\n",
+       "      <td>cqa</td>\n",
+       "      <td>average_language_modeling</td>\n",
+       "      <td>0.2670</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>62</th>\n",
+       "      <td>EleutherAI/pythia-1b-deduped</td>\n",
+       "      <td>copa</td>\n",
+       "      <td>language_modeling</td>\n",
+       "      <td>0.5660</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>63</th>\n",
+       "      <td>EleutherAI/pythia-1b-deduped</td>\n",
+       "      <td>copa</td>\n",
+       "      <td>average_language_modeling</td>\n",
+       "      <td>0.5520</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>64</th>\n",
+       "      <td>EleutherAI/pythia-1b-deduped</td>\n",
+       "      <td>obqa</td>\n",
+       "      <td>language_modeling</td>\n",
+       "      <td>0.3260</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>65</th>\n",
+       "      <td>EleutherAI/pythia-1b-deduped</td>\n",
+       "      <td>obqa</td>\n",
+       "      <td>average_language_modeling</td>\n",
+       "      <td>0.3620</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>66</th>\n",
+       "      <td>EleutherAI/pythia-1b-deduped</td>\n",
+       "      <td>piqa</td>\n",
+       "      <td>language_modeling</td>\n",
+       "      <td>0.6023</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>67</th>\n",
+       "      <td>EleutherAI/pythia-1b-deduped</td>\n",
+       "      <td>piqa</td>\n",
+       "      <td>average_language_modeling</td>\n",
+       "      <td>0.5462</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>68</th>\n",
+       "      <td>EleutherAI/pythia-1b-deduped</td>\n",
+       "      <td>siqa</td>\n",
+       "      <td>language_modeling</td>\n",
+       "      <td>0.3608</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>69</th>\n",
+       "      <td>EleutherAI/pythia-1b-deduped</td>\n",
+       "      <td>siqa</td>\n",
+       "      <td>average_language_modeling</td>\n",
+       "      <td>0.3511</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>70</th>\n",
+       "      <td>EleutherAI/pythia-1b-deduped</td>\n",
+       "      <td>winogrande</td>\n",
+       "      <td>language_modeling</td>\n",
+       "      <td>0.5170</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>71</th>\n",
+       "      <td>EleutherAI/pythia-1b-deduped</td>\n",
+       "      <td>winogrande</td>\n",
+       "      <td>average_language_modeling</td>\n",
+       "      <td>0.5170</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                      checkpoint     dataset                     method  \\\n",
+       "60  EleutherAI/pythia-1b-deduped         cqa          language_modeling   \n",
+       "61  EleutherAI/pythia-1b-deduped         cqa  average_language_modeling   \n",
+       "62  EleutherAI/pythia-1b-deduped        copa          language_modeling   \n",
+       "63  EleutherAI/pythia-1b-deduped        copa  average_language_modeling   \n",
+       "64  EleutherAI/pythia-1b-deduped        obqa          language_modeling   \n",
+       "65  EleutherAI/pythia-1b-deduped        obqa  average_language_modeling   \n",
+       "66  EleutherAI/pythia-1b-deduped        piqa          language_modeling   \n",
+       "67  EleutherAI/pythia-1b-deduped        piqa  average_language_modeling   \n",
+       "68  EleutherAI/pythia-1b-deduped        siqa          language_modeling   \n",
+       "69  EleutherAI/pythia-1b-deduped        siqa  average_language_modeling   \n",
+       "70  EleutherAI/pythia-1b-deduped  winogrande          language_modeling   \n",
+       "71  EleutherAI/pythia-1b-deduped  winogrande  average_language_modeling   \n",
+       "\n",
+       "    accuracy  \n",
+       "60    0.3006  \n",
+       "61    0.2670  \n",
+       "62    0.5660  \n",
+       "63    0.5520  \n",
+       "64    0.3260  \n",
+       "65    0.3620  \n",
+       "66    0.6023  \n",
+       "67    0.5462  \n",
+       "68    0.3608  \n",
+       "69    0.3511  \n",
+       "70    0.5170  \n",
+       "71    0.5170  "
+      ]
+     },
+     "execution_count": 7,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "pythia_df = df[df['checkpoint'].str.startswith(\"EleutherAI\")]\n",
+    "pythia_df[pythia_df['checkpoint'] == \"EleutherAI/pythia-1b-deduped\"]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
