Add support for big-bench emoji movies

--- a/data/data_downloaders/other_data.ipynb
+++ b/data/data_downloaders/other_data.ipynb
@@ -15,6 +15,7 @@
     }
    ],
    "source": [
+    "# next steps: save benchmarks to local \n",
     "from datasets import load_dataset\n",
     "\n",
     "anli = load_dataset(\"anli\")\n",
