--- a/methods/generate_similar_text.ipynb
+++ b/methods/generate_similar_text.ipynb
@@ -11,32 +11,33 @@
      "text": [
       "/usr/local/lib/python3.8/dist-packages/tqdm/auto.py:22: TqdmWarning: IProgress not found. Please update jupyter and ipywidgets. See https://ipywidgets.readthedocs.io/en/stable/user_install.html\n",
       "  from .autonotebook import tqdm as notebook_tqdm\n",
-      "Loading checkpoint shards: 100%|██████████| 2/2 [00:07<00:00,  3.94s/it]\n"
+      "Loading checkpoint shards: 100%|██████████| 2/2 [00:09<00:00,  4.57s/it]\n"
      ]
     }
    ],
    "source": [
+    "import torch\n",
     "from transformers import AutoTokenizer, AutoModelForSeq2SeqLM, GenerationConfig\n",
     "\n",
     "ckpt = f\"../models/FLAN-T5/google/flan-t5-xl\"\n",
     "tokenizer = AutoTokenizer.from_pretrained(ckpt)\n",
-    "model = AutoModelForSeq2SeqLM.from_pretrained(ckpt, device_map=\"auto\")"
+    "model = AutoModelForSeq2SeqLM.from_pretrained(ckpt, device_map=\"auto\", torch_dtype=torch.float16)\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "['<pad> i like attending</s><pad><pad><pad>',\n",
-      " '<pad> like attending a party.</s><pad>',\n",
-      " '<pad> like attending a ballgame.</s>',\n",
-      " '<pad> like attending the meeting.</s><pad><pad>',\n",
-      " '<pad> Like attending meetings.</s><pad><pad><pad>']\n"
+      "['<pad> i like attending.</s><pad><pad><pad>',\n",
+      " '<pad> like attending a conference</s><pad><pad><pad><pad>',\n",
+      " '<pad> like attending a concert</s><pad><pad><pad><pad>',\n",
+      " '<pad> i feel like attending the concert.</s>',\n",
+      " '<pad> like attending a class</s><pad><pad><pad><pad>']\n"
      ]
     }
    ],
