Add generative method

--- a/methods/generate_similar_text.ipynb
+++ b/methods/generate_similar_text.ipynb
@@ -11,7 +11,7 @@
      "text": [
       "/usr/local/lib/python3.8/dist-packages/tqdm/auto.py:22: TqdmWarning: IProgress not found. Please update jupyter and ipywidgets. See https://ipywidgets.readthedocs.io/en/stable/user_install.html\n",
       "  from .autonotebook import tqdm as notebook_tqdm\n",
-      "Loading checkpoint shards: 100%|██████████| 2/2 [00:09<00:00,  4.57s/it]\n"
+      "Loading checkpoint shards: 100%|██████████| 2/2 [00:17<00:00,  8.57s/it]\n"
      ]
     }
    ],
@@ -26,25 +26,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "['<pad> i like attending.</s><pad><pad><pad>',\n",
-      " '<pad> like attending a conference</s><pad><pad><pad><pad>',\n",
-      " '<pad> like attending a concert</s><pad><pad><pad><pad>',\n",
-      " '<pad> i feel like attending the concert.</s>',\n",
-      " '<pad> like attending a class</s><pad><pad><pad><pad>']\n"
+      "['bank of america',\n",
+      " 'banknote, banknotes',\n",
+      " 'bank branch',\n",
+      " 'banknote',\n",
+      " 'banknote']\n"
      ]
     }
    ],
    "source": [
     "import pprint\n",
-    "option = f\"like attending\" # from Social IQA\n",
-    "prompt = f'Generate 5 pieces of text that have similar meaning and similar length to \"{option}\", separated by comma:'\n",
+    "option = f\"Bank\" # from Social IQA\n",
+    "# prompt = f'Generate 5 pieces of text that have similar meaning and similar length to \"{option}\", separated by comma:'\n",
+    "prompt = f\"Generate synonyms to '{option}':\"\n",
     "\n",
     "generation_config = GenerationConfig(\n",
     "    max_new_tokens=50,\n",
@@ -55,7 +56,74 @@
     "\n",
     "inputs = tokenizer(prompt, return_tensors=\"pt\").to(model.device)\n",
     "outputs = model.generate(**inputs, generation_config=generation_config)\n",
-    "pprint.pprint(tokenizer.batch_decode(outputs))"
+    "pprint.pprint(tokenizer.batch_decode(outputs, skip_special_tokens=True))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 23,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['bank of america',\n",
+       " 'banknote, banknotes',\n",
+       " 'bank branch',\n",
+       " 'banknote',\n",
+       " 'banknote']"
+      ]
+     },
+     "execution_count": 23,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "tokenizer.batch_decode(outputs, skip_special_tokens=True)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[1, 2, 3, 5, 6, 7, 9, 10, 11, 13, 14, 15, 17, 18, 19]\n",
+      "[0, 4, 8, 12, 16, 1, 2, 3, 5, 6, 7, 9, 10, 11, 13, 14, 15, 17, 18, 19]\n"
+     ]
+    }
+   ],
+   "source": [
+    "l0 = list(range(20))\n",
+    "l1 = [0,4,8,12,16]\n",
+    "# get l0 - l1\n",
+    "l2 = [i for i in l0 if i not in l1]\n",
+    "print(l2)\n",
+    "print(l1 + l2)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "1"
+      ]
+     },
+     "execution_count": 5,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "l2.pop(0)"
    ]
   },
   {
