--- a/results/visualize.ipynb
+++ b/results/visualize.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -29,7 +29,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -52,7 +52,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -62,7 +62,7 @@
     "cha_df = process(cha_df)\n",
     "cal_df = process(cal_df)\n",
     "gen_df = process(gen_df, drop_columns=[\"number_of_synonyms\"])\n",
-    "cd_df = process(cd_df, drop_columns=[\"expert_accuracy\", \"amateur_accuracy\"])\n",
+    "cd_df = process(cd_df, drop_columns=[\"expert_method\", \"amateur_method\", \"expert_accuracy\", \"amateur_accuracy\"])\n",
     "# concatenate all dataframes\n",
     "pre_df = pd.concat([lm_df, mcp_df, poe_df, cha_df, cal_df, gen_df, cd_df])"
    ]
