--- a/results/main_exp/main_exp.ipynb
+++ b/results/main_exp/main_exp.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -28,7 +28,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -51,7 +51,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -67,7 +67,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -176,7 +176,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -220,7 +220,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 75,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -384,7 +384,7 @@
        "symbol_interpretation                0.210   0.170  "
       ]
      },
-     "execution_count": 75,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -395,7 +395,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 78,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -430,6 +430,10 @@
     "latex_means = latex_means.rename(index={\"logical deduction five objects\": \"logical deduction\"}, \n",
     "                                 columns={\"process of elimination\": \"process of elimination (PoE)\"})\n",
     "\n",
+    "# drop \"accuarcy\" to save some space\n",
+    "latex_means = latex_means.droplevel(0, axis=1)\n",
+    "# add \\hline\n",
+    "# latex_means = latex_means.applymap(lambda x: x + \" \\\\\\\\ \\\\hline\")\n",
     "\n",
     "latex_means.style.to_latex(\n",
     "    buf=\"main_exp.tex\",\n",
