--- a/results/num_option/num_option.ipynb
+++ b/results/num_option/num_option.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -26,7 +26,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -49,7 +49,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -63,7 +63,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -73,7 +73,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -112,6 +112,174 @@
     "\n",
     "plt.tight_layout()\n",
     "plt.savefig(\"num_option.png\", dpi=300, bbox_inches='tight')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead tr th {\n",
+       "        text-align: left;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead tr:last-of-type th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr>\n",
+       "      <th></th>\n",
+       "      <th colspan=\"6\" halign=\"left\">accuracy</th>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>method</th>\n",
+       "      <th>language_modeling</th>\n",
+       "      <th>average_language_modeling</th>\n",
+       "      <th>multiple_choice_prompt</th>\n",
+       "      <th>process_of_elimination</th>\n",
+       "      <th>calibration</th>\n",
+       "      <th>channel</th>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>dataset</th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>logical_deduction_three_objects</th>\n",
+       "      <td>0.570</td>\n",
+       "      <td>0.558</td>\n",
+       "      <td>0.534</td>\n",
+       "      <td>0.702</td>\n",
+       "      <td>0.450</td>\n",
+       "      <td>0.400</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>logical_deduction_five_objects</th>\n",
+       "      <td>0.488</td>\n",
+       "      <td>0.458</td>\n",
+       "      <td>0.398</td>\n",
+       "      <td>0.560</td>\n",
+       "      <td>0.392</td>\n",
+       "      <td>0.208</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>logical_deduction_seven_objects</th>\n",
+       "      <td>0.472</td>\n",
+       "      <td>0.476</td>\n",
+       "      <td>0.452</td>\n",
+       "      <td>0.530</td>\n",
+       "      <td>0.388</td>\n",
+       "      <td>0.182</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                                         accuracy                            \\\n",
+       "method                          language_modeling average_language_modeling   \n",
+       "dataset                                                                       \n",
+       "logical_deduction_three_objects             0.570                     0.558   \n",
+       "logical_deduction_five_objects              0.488                     0.458   \n",
+       "logical_deduction_seven_objects             0.472                     0.476   \n",
+       "\n",
+       "                                                                               \\\n",
+       "method                          multiple_choice_prompt process_of_elimination   \n",
+       "dataset                                                                         \n",
+       "logical_deduction_three_objects                  0.534                  0.702   \n",
+       "logical_deduction_five_objects                   0.398                  0.560   \n",
+       "logical_deduction_seven_objects                  0.452                  0.530   \n",
+       "\n",
+       "                                                     \n",
+       "method                          calibration channel  \n",
+       "dataset                                              \n",
+       "logical_deduction_three_objects       0.450   0.400  \n",
+       "logical_deduction_five_objects        0.392   0.208  \n",
+       "logical_deduction_seven_objects       0.388   0.182  "
+      ]
+     },
+     "execution_count": 7,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "sing_means"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# to produce latex table.\n",
+    "\n",
+    "\n",
+    "# post processing in latex: repalce table with table*\n",
+    "# add \\hline\n",
+    "\n",
+    "# change format, and concatenate two strings.\n",
+    "sing_all = sing_means.applymap(lambda x: f\"{x*100:.1f}\") + sing_errors.applymap(lambda x: f\"\\\\textsubscript{{{x*100:.1f}}}\")\n",
+    "method_index = [('accuracy', 'language_modeling'), \n",
+    "                ('accuracy', 'average_language_modeling'), \n",
+    "                ('accuracy', 'calibration'),\n",
+    "                ('accuracy', 'channel'),\n",
+    "                ('accuracy',    'multiple_choice_prompt'), \n",
+    "                ('accuracy',    'process_of_elimination'),]\n",
+    "sing_all = sing_all.reindex(method_index, axis=\"columns\")\n",
+    "\n",
+    "latex_means = sing_all.rename(columns={\"language_modeling\": \"LM\",\n",
+    "                                         \"average_language_modeling\": \"LM (avg)\",\n",
+    "                                         \"multiple_choice_prompt\": \"MCP\",\n",
+    "                                         \"process_of_elimination\": \"PoE\",\n",
+    "                                         \"calibration\": \"Calibration\",\n",
+    "                                         \"channel\": \"Channel\",},\n",
+    "                                index={\"logical_deduction_five_objects\": \"ld (5)\",\n",
+    "                                        \"logical_deduction_three_objects\": \"ld (3)\",\n",
+    "                                        \"logical_deduction_seven_objects\": \"ld (7)\",\n",
+    "                                        \n",
+    "                                       })\n",
+    "# latex_means = latex_means.rename(index={\"logical deduction five objects\": \"logical deduction\"}, \n",
+    "#                                  columns={\"process of elimination\": \"process of elimination (PoE)\"})\n",
+    "\n",
+    "# drop \"accuarcy\" to save some space\n",
+    "latex_means = latex_means.droplevel(0, axis=1)\n",
+    "# transpose the table\n",
+    "latex_means = latex_means.transpose()\n",
+    "\n",
+    "latex_means.style.to_latex(\n",
+    "    buf = \"num_option.tex\",\n",
+    "    column_format=\"lcccccc\",\n",
+    "    position=\"h\",\n",
+    "    position_float=\"centering\",\n",
+    "    label=\"tab:num_option\",\n",
+    "    caption=\"Accuracy on logical deduction benchmarks with different number of options.\",\n",
+    "    multicol_align=\"c\",\n",
+    "    multirow_align=\"c\",\n",
+    ")"
    ]
   },
   {
