--- a/results/mask/mask.ipynb
+++ b/results/mask/mask.ipynb
@@ -44,7 +44,6 @@
     "\n",
     "# create a new colum that compute the difference between mask_accuracy and accuracy\n",
     "poe_df[\"acc_diff\"] = poe_df[\"mask_accuracy\"] - poe_df[\"accuracy\"]\n",
-    "\n",
     "# poe_df.to_csv(\"mask.csv\")\n",
     "\n",
     "# sort poe_df by mask_strategy adn diff\n",
@@ -66,31 +65,38 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 26,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "dataset: symbol_interpretation\n",
+      "dataset: cqa\n",
       "                                      mask_accuracy  accuracy  acc_diff\n",
       "scoring_method         mask_strategy                                   \n",
-      "multiple_choice_prompt below_average          0.522     0.252     0.270\n",
-      "                       lowest                 0.840     0.235     0.605\n",
-      "channel                lowest                 0.830     0.230     0.600\n"
+      "multiple_choice_prompt lowest                 0.998     0.892     0.106\n",
+      "language_modeling      lowest                 0.962     0.876     0.086\n",
+      "channel                lowest                 0.886     0.818     0.068\n"
      ]
     }
    ],
    "source": [
     "# find the optimal masking strategy\n",
-    "poe_path = f\"./old_results/process_of_elimination.csv\"\n",
+    "poe_path = f\"../old_results/process_of_elimination.csv\"\n",
     "poe_df = pd.read_csv(poe_path)\n",
     "poe_df = poe_df.drop_duplicates()\n",
     "\n",
     "n_shot = 0 \n",
     "# for dataset in \"anli cqa siqa logical_deduction_five_objects disambiguation_qa conceptual_combinations strange_stories symbol_interpretation\".split():\n",
-    "for dataset in ['symbol_interpretation']:\n",
+    "for dataset in ['cqa']:\n",
     "    datasets=[dataset]\n",
     "    data_df = poe_df[(poe_df[\"n_shot\"] == n_shot) & (poe_df[\"dataset\"].isin(datasets))]\n",
     "    data_df = data_df.drop(columns=[\"seed\", \"model_family\", \"checkpoint\", \"method\", \"batch_size\", \"loading_precision\", \"sample\", \"prompting_method\", \"n_shot\"])\n",
@@ -100,6 +106,60 @@
     "    data_mean = data_df.mean()#.unstack()\n",
     "    print(f\"dataset: {dataset}\")\n",
     "    print(data_mean.sort_values(by=['accuracy'], ascending=False).iloc[:3])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 87,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "Index(['below_average', 'lowest'], dtype='object', name='mask_strategy')"
+      ]
+     },
+     "execution_count": 87,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "data_mean.index.levels[1]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 88,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "cqa_mean = data_mean.applymap(lambda x: f\"{x*100:.1f}\")\n",
+    "# rename columns and rows by replacing \"_\" with \" \"\n",
+    "cqa_mean.index = cqa_mean.index.set_names([\"Scoring\", \"Mask\"])\n",
+    "cqa_mean.index = cqa_mean.index.set_levels(cqa_mean.index.levels[0].str.replace('language_modeling', 'LM'), level=0)\n",
+    "cqa_mean.index = cqa_mean.index.set_levels(cqa_mean.index.levels[0].str.replace('multiple_choice_prompt', 'MCP'), level=0)\n",
+    "cqa_mean.index = cqa_mean.index.set_levels(cqa_mean.index.levels[0].str.replace('calibration', 'CAL'), level=0)\n",
+    "cqa_mean.index = cqa_mean.index.set_levels(cqa_mean.index.levels[0].str.replace('channel', 'CHA'), level=0)\n",
+    "cqa_mean.index = cqa_mean.index.set_levels(cqa_mean.index.levels[1].str.replace('below_average', '<avg'), level=1)\n",
+    "\n",
+    "cqa_mean.index = cqa_mean.index.map(lambda x: (x[0].replace('_', ' '), x[1].replace('_', ' ')))\n",
+    "\n",
+    "cqa_mean = cqa_mean.rename(columns={\"accuracy\": \"Acc\",\n",
+    "                                     \"mask_accuracy\": f\"Acc\\\\textsubscript{{mask}}\", \n",
+    "                                     \"acc_diff\": f\"Acc\\\\textsubscript{{diff}}\",  \n",
+    "                                     },)\n",
+    "\n",
+    "cqa_mean.style.to_latex(\n",
+    "    buf=\"mask.tex\",\n",
+    "    column_format=\"l|c|c|c|c\",\n",
+    "    position=\"h\",\n",
+    "    position_float=\"centering\",\n",
+    "    label=\"tab:mask\",\n",
+    "    caption=\"Masking strategy comparison\",\n",
+    "    multicol_align=\"c\",\n",
+    "    multirow_align=\"c\",\n",
+    ")"
    ]
   },
   {
