Change some names

--- a/results/few_shot/few_shot.tex
+++ b/results/few_shot/few_shot.tex
@@ -6,7 +6,7 @@
 n shot & 0 shot & 3 shot \\
 method &  &  \\
 LM & 39.3\textsubscript{6.0} & 45.5\textsubscript{9.2} \\
-LM (avg) & 35.0\textsubscript{6.3} & 48.7\textsubscript{5.6} \\
+AVG & 35.0\textsubscript{6.3} & 48.7\textsubscript{5.6} \\
 Calibration & 39.3\textsubscript{4.3} & 47.8\textsubscript{7.8} \\
 Channel & 34.3\textsubscript{5.6} & 33.3\textsubscript{4.6} \\
 MCP & 59.9\textsubscript{10.0} & 63.8\textsubscript{13.2} \\
