--- a/results/num_option/num_option.ipynb
+++ b/results/num_option/num_option.ipynb
@@ -116,7 +116,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -220,7 +220,7 @@
        "logical_deduction_seven_objects       0.388   0.182  "
       ]
      },
-     "execution_count": 7,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -231,7 +231,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -252,14 +252,14 @@
     "sing_all = sing_all.reindex(method_index, axis=\"columns\")\n",
     "\n",
     "latex_means = sing_all.rename(columns={\"language_modeling\": \"LM\",\n",
-    "                                         \"average_language_modeling\": \"LM (avg)\",\n",
+    "                                         \"average_language_modeling\": \"AVG\",\n",
     "                                         \"multiple_choice_prompt\": \"MCP\",\n",
     "                                         \"process_of_elimination\": \"PoE\",\n",
     "                                         \"calibration\": \"Calibration\",\n",
     "                                         \"channel\": \"Channel\",},\n",
-    "                                index={\"logical_deduction_five_objects\": \"ld (5)\",\n",
-    "                                        \"logical_deduction_three_objects\": \"ld (3)\",\n",
-    "                                        \"logical_deduction_seven_objects\": \"ld (7)\",\n",
+    "                                index={\"logical_deduction_five_objects\": \"LD (5)\",\n",
+    "                                        \"logical_deduction_three_objects\": \"LD (3)\",\n",
+    "                                        \"logical_deduction_seven_objects\": \"LD (7)\",\n",
     "                                        \n",
     "                                       })\n",
     "# latex_means = latex_means.rename(index={\"logical deduction five objects\": \"logical deduction\"}, \n",
@@ -276,7 +276,7 @@
     "    position=\"h\",\n",
     "    position_float=\"centering\",\n",
     "    label=\"tab:num_option\",\n",
-    "    caption=\"Accuracy on logical deduction benchmarks with different number of options.\",\n",
+    "    caption=\"Accuracy on three subtasks of logical deduction, which have different numbers of options.\",\n",
     "    multicol_align=\"c\",\n",
     "    multirow_align=\"c\",\n",
     ")"
