--- a/results/num_option/num_option.tex
+++ b/results/num_option/num_option.tex
@@ -1,12 +1,12 @@
 \begin{table}[h]
 \centering
-\caption{Accuracy on logical deduction benchmarks with different number of options.}
+\caption{Accuracy on three subtasks of logical deduction, which have different numbers of options.}
 \label{tab:num_option}
 \begin{tabular}{lcccccc}
-dataset & ld (3) & ld (5) & ld (7) \\
+dataset & LD (3) & LD (5) & LD (7) \\
 method &  &  &  \\
 LM & 57.0\textsubscript{3.9} & 48.8\textsubscript{2.7} & 47.2\textsubscript{2.7} \\
-LM (avg) & 55.8\textsubscript{2.6} & 45.8\textsubscript{4.5} & 47.6\textsubscript{4.6} \\
+AVG & 55.8\textsubscript{2.6} & 45.8\textsubscript{4.5} & 47.6\textsubscript{4.6} \\
 Calibration & 45.0\textsubscript{3.1} & 39.2\textsubscript{4.0} & 38.8\textsubscript{5.1} \\
 Channel & 40.0\textsubscript{3.8} & 20.8\textsubscript{3.6} & 18.2\textsubscript{2.2} \\
 MCP & 53.4\textsubscript{5.3} & 39.8\textsubscript{3.7} & 45.2\textsubscript{7.3} \\
