--- a/results/few_shot/few_shot.ipynb
+++ b/results/few_shot/few_shot.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -26,7 +26,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -49,7 +49,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -63,7 +63,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -119,7 +119,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 78,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -166,7 +166,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 110,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -252,7 +252,7 @@
        "3                    0.629333    0.478000  0.332667  "
       ]
      },
-     "execution_count": 110,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -263,7 +263,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 114,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -285,7 +285,7 @@
     "\n",
     "\n",
     "latex_means = sing_all.rename(columns={\"language_modeling\": \"LM\",\n",
-    "                                         \"average_language_modeling\": \"LM (avg)\",\n",
+    "                                         \"average_language_modeling\": \"AVG\",\n",
     "                                         \"multiple_choice_prompt\": \"MCP\",\n",
     "                                         \"process_of_elimination\": \"PoE\",\n",
     "                                         \"calibration\": \"Calibration\",\n",
