Update some captions

--- a/results/few_shot/few_shot.ipynb
+++ b/results/few_shot/few_shot.ipynb
@@ -263,7 +263,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -294,6 +294,7 @@
     "                                       )\n",
     "\n",
     "latex_means.index = latex_means.index.set_names([\"n shot\"])\n",
+    "latex_means.columns = latex_means.columns.set_names([None, \"Method\"])\n",
     "\n",
     "# drop \"accuarcy\" to save some space\n",
     "latex_means = latex_means.droplevel(0, axis=1)\n",
@@ -302,11 +303,11 @@
     "\n",
     "latex_means.style.to_latex(\n",
     "    buf=f\"few_shot.tex\",\n",
-    "    column_format=\"lcccccc\",\n",
+    "    column_format=\"l|c|c\",\n",
     "    position=\"h\",\n",
     "    position_float=\"centering\",\n",
     "    label=\"tab:few_shot\",\n",
-    "    caption=\"Few-shot results on ANLI.\",\n",
+    "    caption=\"Few-shot results on ANLI. PoE applie to both zero-shot and few-shot settings.\",\n",
     "    multicol_align=\"c\",\n",
     "    multirow_align=\"c\",\n",
     ")"
