--- a/results/num_option/num_option.ipynb
+++ b/results/num_option/num_option.ipynb
@@ -250,6 +250,8 @@
     "                ('accuracy',    'multiple_choice_prompt'), \n",
     "                ('accuracy',    'process_of_elimination'),]\n",
     "sing_all = sing_all.reindex(method_index, axis=\"columns\")\n",
+    "sing_all = sing_all.rename_axis(\"Dataset\")\n",
+    "sing_all.columns = sing_all.columns.set_names([None, \"Method\"])\n",
     "\n",
     "latex_means = sing_all.rename(columns={\"language_modeling\": \"LM\",\n",
     "                                         \"average_language_modeling\": \"AVG\",\n",
@@ -272,11 +274,11 @@
     "\n",
     "latex_means.style.to_latex(\n",
     "    buf = \"num_option.tex\",\n",
-    "    column_format=\"lcccccc\",\n",
+    "    column_format=\"l|c|c|c\",\n",
     "    position=\"h\",\n",
     "    position_float=\"centering\",\n",
     "    label=\"tab:num_option\",\n",
-    "    caption=\"Accuracy on three subtasks of logical deduction, which have different numbers of options.\",\n",
+    "    caption=\"Accuracy scores on three subtasks of logical deduction, which have different numbers of options. PoE applies to tasks of varying difficulties.\",\n",
     "    multicol_align=\"c\",\n",
     "    multirow_align=\"c\",\n",
     ")"
