--- a/results/few_shot/few_shot.tex
+++ b/results/few_shot/few_shot.tex
@@ -4,7 +4,7 @@
 \label{tab:few_shot}
 \begin{tabular}{lcccccc}
 n shot & 0 shot & 3 shot \\
-method &  &  \\
+Method &  &  \\
 LM & 39.3\textsubscript{6.0} & 45.5\textsubscript{9.2} \\
 AVG & 35.0\textsubscript{6.3} & 48.7\textsubscript{5.6} \\
 Calibration & 39.3\textsubscript{4.3} & 47.8\textsubscript{7.8} \\
