--- a/results/main_exp/main_exp.tex
+++ b/results/main_exp/main_exp.tex
@@ -2,9 +2,9 @@
 \centering
 \caption{Accuracy scores (with standard deviation) on 8 benchmarks. LM refers to language modeling, MCP refers multiple choice prompt. Our method (PoE) achieves best or comparable performance on all benchmarks.}
 \label{tab:main_exp}
-\begin{tabular}{l|c|c|c|c|c|c|c|c}
-method & LM & AVG & Calibration & Channel & MCP & PoE \\
-dataset &  &  &  &  &  &  \\
+\begin{tabular}{l|c|c|c|c|c|c}
+Method & LM & AVG & Calibration & Channel & MCP & PoE \\
+Dataset &  &  &  &  &  &  \\
 ANLI & 38.6\textsubscript{2.9} & 38.0\textsubscript{3.4} & 37.2\textsubscript{3.5} & 36.0\textsubscript{2.7} & 57.8\textsubscript{3.0} & 55.0\textsubscript{2.4} \\
 CQA & 64.4\textsubscript{5.9} & 54.2\textsubscript{1.3} & 69.6\textsubscript{4.8} & 44.6\textsubscript{5.6} & 87.2\textsubscript{2.6} & 89.2\textsubscript{2.2} \\
 SIQA & 56.0\textsubscript{4.5} & 62.6\textsubscript{1.8} & 57.6\textsubscript{6.9} & 39.8\textsubscript{5.9} & 79.0\textsubscript{5.6} & 82.0\textsubscript{6.7} \\
