--- a/results/num_option/num_option.tex
+++ b/results/num_option/num_option.tex
@@ -3,8 +3,8 @@
 \caption{Accuracy on three subtasks of logical deduction, which have different numbers of options.}
 \label{tab:num_option}
 \begin{tabular}{lcccccc}
-dataset & LD (3) & LD (5) & LD (7) \\
-method &  &  &  \\
+Dataset & LD (3) & LD (5) & LD (7) \\
+Method &  &  &  \\
 LM & 57.0\textsubscript{3.9} & 48.8\textsubscript{2.7} & 47.2\textsubscript{2.7} \\
 AVG & 55.8\textsubscript{2.6} & 45.8\textsubscript{4.5} & 47.6\textsubscript{4.6} \\
 Calibration & 45.0\textsubscript{3.1} & 39.2\textsubscript{4.0} & 38.8\textsubscript{5.1} \\
