--- a/results/few_shot/few_shot.ipynb
+++ b/results/few_shot/few_shot.ipynb
@@ -307,7 +307,7 @@
     "    position=\"h\",\n",
     "    position_float=\"centering\",\n",
     "    label=\"tab:few_shot\",\n",
-    "    caption=\"Few-shot results on ANLI. PoE applie to both zero-shot and few-shot settings.\",\n",
+    "    caption=\"Few-shot results (accuracy scores) on ANLI. PoE applie to both zero-shot and few-shot settings.\",\n",
     "    multicol_align=\"c\",\n",
     "    multirow_align=\"c\",\n",
     ")"
