--- a/results/main_exp/main_exp.ipynb
+++ b/results/main_exp/main_exp.ipynb
@@ -275,7 +275,7 @@
     "    position=\"h\",\n",
     "    position_float=\"centering\",\n",
     "    label=\"tab:main_exp\",\n",
-    "    caption=\"Accuracy scores (with standard deviation) on 8 benchmarks. LM refers to language modeling, AVG refers to average language modeling, MCP refers multiple choice prompting. Our method (PoE) achieves best or comparable performance on all benchmarks.\",\n",
+    "    caption=\"Accuracy scores (with standard deviation) on 8 benchmarks. LM refers to language modeling, AVG refers to average language modeling, MCP refers multiple choice prompting. Our method (PoE) achieves the best or comparable performance on all benchmarks.\",\n",
     "    multicol_align=\"c\",\n",
     "    multirow_align=\"c\",\n",
     ")"
